<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView_CardId"
        android:layout_column="0"
        android:layout_gravity="bottom"
        android:layout_row="0"
        android:text="@string/card_id" />

    <EditText
        android:id="@+id/editText_CardId"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="0"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/card_hint"
        android:inputType="number" >
    </EditText>

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp"
        android:layout_row="1" />

    <TextView
        android:id="@+id/textView_CredentialId"
        android:layout_column="0"
        android:layout_gravity="bottom"
        android:layout_row="2"
        android:text="@string/credential_id" />

    <EditText
        android:id="@+id/editText_CredentialId"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="2"
        android:ems="10"
        android:hint="@string/credential_hint"
        android:inputType="number"
        android:text="85"
        >

    </EditText>

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp"
        android:layout_row="7" />

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp"
        android:layout_row="7" />

    <Button
        android:id="@+id/button_Register"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_margin="20dp"
        
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="8"
        android:text="@string/button_text" 
        android:onClick="registerBadge"
        />

</GridLayout>